# aml-randomapi-data-generator-fastapi

./: README.md  pyproject.toml
api/: __init__.py  aml_routes.py  app.py  data_generator.py  dummy_data.py  endpoints.json  main.py  models.py  openapi.yaml  routes.py
utilities/: execute_python_scripts.py
