[project]
name = "aml-analysis-api"
version = "1.0.0"
description = "API for Anti-Money Laundering analysis and data retrieval"
authors = [
    { name = "AML Team" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.23",
    "python-jose[cryptography]>=3.3.0",  # For JWT handling
    "passlib[bcrypt]>=1.7.4",  # For password hashing
    "python-multipart>=0.0.6",  # For form data handling
    "email-validator>=2.1.0",   # For email validation
    "python-dateutil>=2.8.2",   # For date handling
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Documentation = "https://github.com/yourusername/aml-analysis-api#readme"
Source = "https://github.com/yourusername/aml-analysis-api"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.5",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
